# oi-interface

./: .coveragerc  .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  deploy_to_rg351p.sh  progress.md  pytest.ini  run_main_tests.sh  run_quality_tests.sh  runtests.py  start-oi.sh
src/oi-cli/: AGENTS.md  README.md  __init__.py  api_client.py  command_catalog.py  gateway_api.py  oi_cli.py  presentation.py  pyproject.toml  runner.py
src/oi-cli/tests/: test_cli.py  test_cli_architecture.py  test_cli_coverage.py
src/oi-clients/oi-sim/: AGENTS.md  README.md  conftest.py  pyproject.toml
src/oi-clients/oi-sim/tests/: __init__.py  test_fixtures.py  test_sim_commands_and_errors.py  test_sim_connection_flow.py  test_sim_device_events.py  test_sim_fixtures_io.py  test_sim_state_machine.py  test_sim_unit.py  test_streaming_repl.py
src/oi-dashboard/: AGENTS.md  README.md  pyproject.toml
src/oi-dashboard/src/oi_dashboard/: __init__.py  browser_app.py  browser_reducer.py  browser_shell.py  browser_store.py  browser_transport.py  browser_view.py  cli.py  dashboard.py  event_payloads.py  fallback_html.py  gateway_api.py  gateway_integration.py  poller.py  sse.py  state.py
src/oi-dashboard/static/: index.html
src/oi-dashboard/tests/: __init__.py  conftest.py  test_browser_reducer.py  test_cli.py  test_dashboard.py  test_event_payloads.py  test_gateway_api.py  test_gateway_integration.py  test_poller.py  test_sse.py  test_state.py
src/oi-gateway/: AGENTS.md  CHARACTER_STATES_ASCII.md  IMPLEMENTATION_SUMMARY.md  OPENCLAW.md  README.md  STREAMING_IMPLEMENTATION.md  __init__.py  config.toml.example  hermes.env.example  openai.env.example  openclaw.env.example  progress.md  pyproject.toml  secrets.toml.example
src/oi-gateway/src/: config_loader.py  gateway_app.py  runtime_paths.py
src/oi-gateway/src/api/: __init__.py
src/oi-gateway/src/attention/: __init__.py  events.py  policy.py
src/oi-gateway/src/audio/: __init__.py  delivery.py  pipeline.py  stt.py  tts.py
src/oi-gateway/src/channel/: __init__.py  backend.py  cli_backend.py  codex_backend.py  factory.py  hermes_backend.py  openclaw_backend.py  opencode_backend.py  pi_backend.py  piclaw_backend.py  request_builder.py  service.py
src/oi-gateway/src/character_packs/: __init__.py  (+2 more)
src/oi-gateway/tests/: conftest.py  test_audio_delivery.py  test_audio_delivery_more.py  test_audio_delivery_streaming_deltas.py  test_audio_quality.py  test_backend_factory.py  test_channel.py  test_channel_request_builder.py  test_character_packs.py  test_character_packs_api.py  test_character_packs_models.py  test_character_packs_phase6.py  test_character_renderer_service.py  test_codex_backend.py  test_coding.py  test_commands.py  test_config_loader.py  test_datp_server.py  test_device_renderer.py  test_e2e_full_flow.py  test_firmware_interface.py  test_gateway_api.py  test_gateway_api_unit.py  test_gateway_app.py  test_gateway_app_more.py  test_git_utils.py  test_git_utils_e2e.py  test_hermes_backend.py  test_integration_cli.py  test_multi_device_manager_more.py  test_openclaw_backend.py  test_opencode_backend.py  test_opencode_backend_and_factory.py  test_pi_backend_unit.py  test_piclaw_backend.py  test_registry.py  test_registry_heartbeat_more.py  test_registry_stability.py  test_routing.py  test_runtime_paths.py  (+13 more)
(+407 files in other folders)
