[project]
name = "oi-cli"
version = "0.1.0"
description = "oi-cli — CLI wrapper for oi-gateway resource tree API"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
oi = "oi_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]