[project]
name = "oi-gateway"
version = "0.1.0"
description = "Oi v2 gateway: DATP endpoint, device registry, STT/TTS, resource tree API"
requires-python = ">=3.11"
dependencies = ["websockets>=14.0", "aiohttp>=3.9"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
stt = [
    "faster-whisper>=0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
