[project]
name = "oi-gateway"
version = "0.1.0"
description = "Oi v2 gateway: DATP endpoint, device registry, STT/TTS, resource tree API"
requires-python = ">=3.11"
dependencies = ["websockets>=14.0", "aiohttp>=3.9"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0",
]
stt = [
    "faster-whisper>=0.10",
]
tts = [
    "piper-tts>=1.4,<2.0",
]
integrations = [
    "paho-mqtt>=2.1",
]
all = [
    "faster-whisper>=0.10",
    "piper-tts>=1.4,<2.0",
    "paho-mqtt>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
