[project]
name = "oi-sim"
version = "0.1.0"
description = "Oi v2 virtual DATP device — scriptable WebSocket client that impersonates a physical device"
requires-python = ">=3.11"
dependencies = ["websockets>=14.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
oi-sim = "sim.repl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "../../oi-gateway/src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
